Fix switch icon showing through on mobile #15112

--- a/UI/FlipCard/FlipCard.scss
+++ b/UI/FlipCard/FlipCard.scss
@@ -31,7 +31,6 @@
 		position: absolute;
 		top: 0.5rem;
 		right: 0.5rem;
-		z-index: 1;
 	}
 
     &--hover:hover #{$flip_card}__internal,
